# testing-python

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  pytest.ini
.claude/: settings.json
src/: config.py  constants.py
src/ui/: application.py
src/ui/components/: demo_project_option.py  project_card.py  project_type_option.py  readme_panel.py
src/ui/models/: badge.py  checkbox_state.py  project_type.py
src/ui/pages/: empty_project_page.py  home_page.py  login_page.py  new_project_page.py  project_page.py  project_tests_page.py
tests/: conftest.py  first_test.py  first_tests.py
tests/ui/: login_page_tests.py  project_tests.py
