[project]
name = "testing-python"
version = "0.1.0"
description = "Testing with python project"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=40.11.1",
    "pytest-playwright>=0.7.2",
]

[dependency-groups]
dev = [
    # Ruff is used for linting and formatting the project code to ensure style consistency and find bugs.
    "ruff>=0.15.8",
    # Ty is used for type checking and ensuring type safety within the project.
    "ty>=0.0.26",
]

[tool.ruff]
# Set the maximum line length
line-length = 120

# Target specific Python version to avoid false positives for new syntax
target-version = "py314"

[tool.ruff.lint]
# Select all default rules (E, F) plus Bugbear (B), isort (I), and pyupgrade (UP) rules
select = ["E", "W", "F", "B", "I", "UP"]

# Ignore specific rules
ignore = ["E501"] # Example: ignore line length rule if handled by the formatter

[tool.ruff.format]
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
